# TauTerm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: release.yml
.kilo/: kilo.json
docs/: theme-guide.md
resources/com0com/: README.md
scripts/: apply-logo.mjs  check-com0com.js  set-admin-manifest.js  sync-version.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/channel/: async_io_loop.rs  error.rs  io_loop.rs  mod.rs  serial_channel.rs  serial_comm.rs  ssh_channel.rs
src-tauri/src/kernel/: comm_handle.rs  config_store.rs  data_batcher.rs  file_transfer.rs  i18n_engine.rs  ipc_bridge.rs  log_engine.rs  log_writer.rs  mod.rs  plugin_adapter.rs  plugin_host.rs  session_store.rs  shortcut_engine.rs  tab_host.rs  theme_engine.rs  window_manager.rs
src-tauri/src/kernel/script_engine/: codegen.rs  lua_api.rs  mod.rs  sandbox.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/serial/: mod.rs
src-tauri/src/plugins/ssh/: handler.rs  mod.rs
src-tauri/src/security/: credential_store.rs  log_sanitizer.rs  mod.rs
src-tauri/src/serial/: config.rs  manager.rs  mod.rs
src-tauri/src/session/: manager.rs  mod.rs  serial.rs
src-tauri/src/transfer/: crc.rs  io.rs  manager.rs  mod.rs  orchestrator.rs  panic_guard.rs  protocol.rs  serial_transfer.rs  sftp_transfer.rs  ssh_file_service.rs  types.rs  xmodem.rs  ymodem.rs  zmodem.rs
src-tauri/src/virtual_port/: backend.rs  bridge.rs  manager.rs  mod.rs  socat.rs
src-tauri/windows/: hooks.nsh  manifest.xml
src/components/: TabContentDispatcher.tsx
src/context/: SessionContext.tsx  ThemeContext.tsx  ToastContext.tsx  TransferContext.tsx
src/core/: plugin-registry.ts
src/hooks/: useCom0comStatus.ts  useContextMenu.ts  useFileTransfer.ts  useKeyboard.ts  usePointerDragReorder.ts  useSerialPort.ts
src/i18n/: index.ts  types.ts
src/profiles/: index.ts  serial.ts  ssh.ts  types.ts
src/renderers/: CustomRenderer.tsx  FileBrowserRenderer.module.css  FileBrowserRenderer.tsx  StatsDashboardRenderer.module.css  StatsDashboardRenderer.tsx  TerminalRenderer.tsx  types.ts
src/shortcuts/: actionIds.ts  registry.ts
(+327 files in other folders)
