[package]
name = "tauterm"
version = "0.3.0"
description = "TauTerm - 跨平台全功能终端模拟器"
authors = ["TauTerm"]
edition = "2021"

[lib]
name = "tauterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
thiserror = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
regex = "1"
